front end stuff for favourites and profile. working so far

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 VITE_BACKEND_PIANO_API_URL="http://localhost:5005/pianos"
 VITE_BACKEND_AUTH_API_URL="http://localhost:5005/auth"
+VITE_BACKEND_FAVOURITES_API_URL="http://localhost:5005/favourites"
